ocp-yaml/infinispan-libs-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: infinispan-libs-pod
spec:
  securityContext:
    fsGroup: 2000
  volumes:
    - name: lib-pv-storage
      persistentVolumeClaim:
        claimName: infinispan-libs
  containers:
    - name: lib-pv-container
      image: registry.redhat.io/datagrid/datagrid-8-rhel8:1.3
      volumeMounts:
        - mountPath: /tmp/libs
          name: lib-pv-storage
