ocp-yaml/server-jar-provider.yml
apiVersion: v1
items:
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: server-jar-provider
      app.kubernetes.io/component: server-jar-provider
      app.kubernetes.io/instance: server-jar-provider
    name: server-jar-provider-artifacts
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: server-jar-provider
    name: server-jar-provider
  spec:
    lookupPolicy:
      local: false
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    labels:
      app: server-jar-provider
      app.kubernetes.io/component: server-jar-provider
      app.kubernetes.io/instance: server-jar-provider
    name: server-jar-provider-artifacts
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: server-jar-provider-artifacts:latest
    postCommit: {}
    resources: {}
    source:
      git:
        uri: https://github.com/tkterris/rhdg-ocp-demo.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: java:openjdk-17-ubi8
          namespace: openshift
      type: Source
    triggers:
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    labels:
      app: server-jar-provider
    name: server-jar-provider
  spec:
    output:
      to:
        kind: ImageStreamTag
        name: server-jar-provider:latest
    source:
      dockerfile: |-
        FROM httpd:latest
        ADD deployments/rhdg-ocp-demo-server*.jar /var/www/html/server.jar
        CMD run-httpd
      images:
      - from:
          kind: ImageStreamTag
          name: server-jar-provider-artifacts:latest
        paths:
        - destinationDir: .
          sourcePath: /deployments
    strategy:
      dockerStrategy:
        from:
          kind: ImageStreamTag
          name: httpd:latest
          namespace: openshift
        imageOptimizationPolicy: SkipLayers
      type: Docker
    triggers:
    - type: ConfigChange
    - imageChange: 
        from:
          kind: ImageStreamTag
          name: server-jar-provider-artifacts:latest
      type: ImageChange
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"server-jar-provider:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"server-jar-provider\")].image"}]'
    labels:
      app: server-jar-provider
      app.kubernetes.io/component: server-jar-provider
      app.kubernetes.io/instance: server-jar-provider
    name: server-jar-provider
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: server-jar-provider
    template:
      metadata:
        annotations:
        labels:
          deployment: server-jar-provider
      spec:
        containers:
        - image: server-jar-provider:latest
          name: server-jar-provider
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: server-jar-provider
      app.kubernetes.io/component: server-jar-provider
      app.kubernetes.io/instance: server-jar-provider
    name: server-jar-provider
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deployment: server-jar-provider
kind: List
metadata: {}
