ocp-yaml/client-application.yaml
apiVersion: v1
items:
- apiVersion: v1
  stringData:
    authorized.username: authorized
    authorized.password: Authorized-password!
    unauthorized.username: unauthorized
    unauthorized.password: Unauthorized-password!
    invalid.username: invalid
    invalid.password: Invalid-password!
  kind: Secret
  metadata:
    labels:
      app: client
      app.kubernetes.io/component: client
      app.kubernetes.io/instance: client
    name: client-secret
  type: Opaque
- apiVersion: image.openshift.io/v1
  kind: ImageStream
  metadata:
    labels:
      app: client
      app.kubernetes.io/component: client
      app.kubernetes.io/instance: client
    name: client
  spec:
    lookupPolicy:
      local: false
  status:
    dockerImageRepository: ""
- apiVersion: build.openshift.io/v1
  kind: BuildConfig
  metadata:
    labels:
      app: client
      app.kubernetes.io/component: client
      app.kubernetes.io/instance: client
    name: client
  spec:
    nodeSelector: null
    output:
      to:
        kind: ImageStreamTag
        name: client:latest
    postCommit: {}
    resources: {}
    source:
      git:
        uri: https://github.com/tkterris/rhdg-ocp-demo.git
      type: Git
    strategy:
      sourceStrategy:
        from:
          kind: ImageStreamTag
          name: java:openjdk-17-ubi8
          namespace: openshift
      type: Source
    triggers:
    - github:
        secret: lEdmq6PwOfGLgnYsG4tA
      type: GitHub
    - generic:
        secret: vVhZizaaKiTg7G7xzgG6
      type: Generic
    - type: ConfigChange
    - imageChange: {}
      type: ImageChange
  status:
    lastVersion: 0
- apiVersion: apps/v1
  kind: Deployment
  metadata:
    annotations:
      image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"client:latest"},"fieldPath":"spec.template.spec.containers[?(@.name==\"client\")].image"}]'
    labels:
      app: client
      app.kubernetes.io/component: client
      app.kubernetes.io/instance: client
    name: client
  spec:
    replicas: 1
    selector:
      matchLabels:
        deployment: client
    template:
      metadata:
        annotations:
        labels:
          deployment: client
      spec:
        containers:
        - image: ' '
          name: client
          ports:
          - containerPort: 8080
            protocol: TCP
          - containerPort: 8443
            protocol: TCP
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            runAsNonRoot: true
            seccompProfile:
              type: RuntimeDefault
- apiVersion: v1
  kind: Service
  metadata:
    creationTimestamp: null
    labels:
      app: client
      app.kubernetes.io/component: client
      app.kubernetes.io/instance: client
    name: client
  spec:
    ports:
    - name: 8080-tcp
      port: 8080
      protocol: TCP
      targetPort: 8080
    - name: 8443-tcp
      port: 8443
      protocol: TCP
      targetPort: 8443
    selector:
      deployment: client
- apiVersion: route.openshift.io/v1
  kind: Route
  metadata:
    annotations:
      openshift.io/host.generated: "true"
    labels:
      app: client
      app.kubernetes.io/component: client
      app.kubernetes.io/instance: client
    name: client
  spec:
    port:
      targetPort: 8080-tcp
    to:
      kind: Service
      name: client
      weight: 100
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
    wildcardPolicy: None
kind: List
metadata: {}
