ocp-yaml/operator-resources.yaml
apiVersion: v1
items:
- apiVersion: v1
  kind: Secret
  stringData:
    identities.yaml: |-
      credentials:
        - username: authorized
          password: Authorized-password!
          roles:
          - authorized-role
        - username: unauthorized
          password: Unauthorized-password!
  metadata:
    name: operator-secret
    labels:
      app: infinispan-operator
      app.kubernetes.io/component: infinispan-operator
      app.kubernetes.io/instance: infinispan-operator
  type: Opaque
- apiVersion: infinispan.org/v1
  kind: Infinispan
  metadata:
    name: infinispan-cluster
    labels:
      app: infinispan-operator
      app.kubernetes.io/component: infinispan-operator
      app.kubernetes.io/instance: infinispan-operator
  spec:
    dependencies:
      artifacts:
        - url: http://httpd-ex:8080/server.jar
    security:
      authorization:
        roles:
          - name: authorized-role
            permissions:
            - ALL
        enabled: true
      endpointEncryption:
        type: None
        clientCert: None
      endpointAuthentication: true
      endpointSecretName: operator-secret
    service:
      type: DataGrid
    container:
      ephemeralStorage: true
    replicas: 2
- apiVersion: infinispan.org/v2alpha1
  kind: Cache
  metadata:
    name: test-cache
    labels:
      app: infinispan-operator
      app.kubernetes.io/component: infinispan-operator
      app.kubernetes.io/instance: infinispan-operator
  spec:
    clusterName: infinispan-cluster
    name: test-cache
    template: >-
      <distributed-cache mode="SYNC" statistics="true">
          <security>
              <authorization roles="authorized-role"/>
          </security>
          <persistence>
              <store class="com.redhat.rhdg.demo.server.loader.CustomStore" segmented="false"/>
          </persistence>
          <encoding>
              <key media-type="application/x-protostream"/>
              <value media-type="application/x-protostream"/>
          </encoding>
      </distributed-cache>
- apiVersion: route.openshift.io/v1
  kind: Route
  annotations:
    openshift.io/host.generated: 'true'
  metadata:
    labels:
      app: infinispan-operator
      app.kubernetes.io/component: infinispan-operator
      app.kubernetes.io/instance: infinispan-operator
    name: infinispan-cluster
  spec:
    port:
      targetPort: infinispan
    to:
      kind: Service
      name: infinispan-cluster
      weight: 100
    tls:
      termination: edge
      insecureEdgeTerminationPolicy: Redirect
    wildcardPolicy: None
kind: List
metadata: {}
